fix(docs): fix dox
